[project]
name = "python-macrobenchmarks"
version = "0.9.0"  # XXX an arbitrary value; the repo doesn't have one
description = "Pyston benchmarks"
#requires-python = ">=3.8"
dependencies = ["pyperf"]
urls = {repository = "https://github.com/pyston/python-macrobenchmarks"}

[tool.pyperformance]
manifest = "benchmarks/MANIFEST"
