[project]
name = "bm_djangocms"
dependencies = [
    "Django",
    "django-cms",
    "djangocms-bootstrap4",
    "djangocms-file",
    "djangocms-googlemap",
    "djangocms-installer",
    "djangocms-snippet",
    "djangocms-style",
    "djangocms-video",
    "requests",
]

# XXX This should be inherited from metabase.
dynamic = [
  "name",
  "version",
]

[tool.pyperformance]
# "name" is set automatically.
metabase = ".."

prescript = "run_benchmark.py"
pre_extra_opts = ["--pre"]
postscript = "run_benchmark.py"
post_extra_opts = ["--post"]
